# rhema

./: .actrc  .env.local.example  .gitignore  .npmrc  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  MKDOCS_MIGRATION.md  README.md  RELEASING.md  ROADMAP.md  TEST_STATUS.md  TODO.md  TODOS.md  biome.json  cspell.config.yaml  docker-compose.yml  docs.sh  justfile  mkdocs.yml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements-docs.txt  tsconfig.base.json  vitest.config.ts
apps/rhema/: Cargo.toml  README.md  TODO.md  project.json
apps/rhema/src/: lib.rs  main.rs
crates/action-agents/code-review-agent/: Cargo.toml
crates/action-tools/cargo-tool/: Cargo.toml  README.md  TODO.md
crates/action-tools/jest-tool/: Cargo.toml
crates/action-tools/jscodeshift-tool/: Cargo.toml
crates/action-tools/prettier-tool/: Cargo.toml
crates/agent/: Cargo.toml  project.json
crates/agent/examples/: comprehensive_agent_workflow.rs
crates/agent/src/: communication.rs  error.rs  lib.rs  lifecycle.rs  metrics.rs  policies.rs
crates/ai/: Cargo.toml  PRODUCTION_INTEGRATION.md  README.md  TODO.md  build.rs  project.json
crates/ai/src/: agent.rs  ai_service.rs  context_injection.rs  coordination_integration.rs  lib.rs  production_config.rs  production_integration.rs
crates/cli/: Cargo.toml  README.md  project.json
crates/cli/src/: batch.rs  commands.rs  config.rs  context_rules.rs  coordination.rs  daemon.rs  decision.rs  dependencies.rs  export_context.rs  generate_readme.rs  git.rs  health.rs  impact.rs  init.rs  insight.rs  integrations.rs  interactive.rs  interactive_advanced.rs  interactive_builder.rs  interactive_enhanced.rs  interactive_parser.rs  knowledge.rs  lib.rs  lock.rs  locomo.rs  main.rs  migrate.rs  mod.rs  pattern.rs  performance.rs  prompt.rs  schema.rs  scopes.rs  show.rs  sync.rs  template.rs  todo.rs  validate.rs  workflow.rs
crates/dependency/: Cargo.toml  README.md  project.json
crates/dependency/examples/: basic_usage.rs  enhanced_usage.rs  health_monitoring.rs
crates/dependency/src/: config.rs  error.rs  health.rs  impact.rs  integrations.rs  lib.rs  metrics.rs  security.rs  types.rs  user_experience.rs
crates/git/: Cargo.toml  README.md  TODO.md  project.json
crates/git/examples/: conflict_resolution_example.rs  real_workflow_example.rs  workflow_example.rs
crates/git/src/: git.rs  git_basic.rs  lib.rs
crates/integrations/: Cargo.toml  README.md  project.json
crates/integrations/src/: analytics.rs  integrations.rs
crates/knowledge/: Cargo.toml  PRODUCTION_INTEGRATION.md  README.md  TODO.md  project.json
crates/knowledge/src/: ai_integration.rs  cache.rs  cross_session.rs  embedding.rs  engine.rs  enhanced_cache.rs  enhanced_engine.rs  indexing.rs  lib.rs  performance.rs  proactive.rs  search.rs  storage.rs  types.rs  vector.rs
crates/mcp/: Cargo.toml  README.md  TODO.md  project.json
crates/mcp/src/: auth.rs  cache.rs  context.rs  http_server.rs  lib.rs  mcp.rs  official_sdk.rs  sdk.rs  watcher.rs
crates/monitoring/: Cargo.toml  project.json
crates/monitoring/src/: dashboard.rs  lib.rs  locomo_integration.rs  monitoring.rs  performance.rs
crates/query/: Cargo.toml  README.md  project.json
crates/query/src/: caching.rs  lib.rs  query.rs  repo_analysis.rs  search.rs
crates/rhema/: Cargo.toml  README.md  TODO.md  main.rs  project.json
crates/rhema-action/: Cargo.toml  README.md  project.json
crates/rhema-action-tool/: Cargo.toml
crates/rhema-action-tool/src/: error.rs  lib.rs  result.rs  traits.rs  types.rs
crates/rhema-action/src/: approval.rs  cli.rs  error.rs  git.rs  lib.rs  pipeline.rs  rollback.rs  schema.rs  tools.rs  validation.rs
crates/rhema-api/: Cargo.toml  README.md
crates/rhema-api/examples/: README.md  init_unit_tests.rs  simple_coordination_example.rs  unit_tests.rs
crates/rhema-api/src/: api_docs.rs  init.rs  lib.rs  main.rs  performance.rs  security.rs  tests.rs
crates/rhema-config/: Cargo.toml  README.md  TODO.md  project.json
crates/rhema-config/examples/: README.md  backup_example.rs  comprehensive_validation_example.rs  migration_example.rs  security_example.rs
crates/rhema-config/src/: backup.rs  comprehensive_validator.rs  config.rs  global.rs  invariants.rs  lib.rs  lock.rs  migration.rs  repository.rs  schema_validator.rs  scope.rs  security.rs  test_config.rs  tools.rs  types.rs  validation.rs  validation_rules.rs
crates/rhema-coordination/: Cargo.toml  README.md
crates/rhema-coordination/src/: ai_service.rs  context_injection.rs  coordination_integration.rs  production_config.rs  production_integration.rs
crates/rhema-core/: Cargo.toml  README.md  project.json
crates/rhema-core/examples/: test_scope_loader.rs
crates/rhema-core/src/: error.rs  lib.rs  lock.rs  schema.rs  scope.rs
crates/rhema-git/: Cargo.toml  README.md  project.json
crates/rhema-git-workflow-templates/: Cargo.toml
crates/rhema-git-workflow-templates/src/: lib.rs  templates.rs
crates/rhema-git/examples/: conflict_resolution_example.rs  git_hooks_example.rs  real_workflow_example.rs  workflow_example.rs
crates/rhema-git/src/: git_basic.rs  git_hooks.rs  lib.rs  utils.rs  workflow_templates.rs
crates/rhema-locomo/: Cargo.toml  README.md  project.json
crates/rhema-locomo/src/: benchmark_engine.rs  lib.rs  metrics.rs  optimization.rs  quality_assessor.rs  reporting.rs  types.rs  validation.rs
crates/rhema-mcp/: Cargo.toml  README.md  project.json
crates/rhema-mcp/src/: auth.rs  cache.rs  context.rs  http_server.rs  lib.rs  mcp.rs  official_sdk.rs  tests.rs  watcher.rs
crates/rhema/examples/: unit_tests.rs
crates/rhema/lock/: conflict_resolver_test.rs  resolver.rs  validator.rs
crates/rhema/src/: api_docs.rs  lib.rs  main.rs  performance.rs  security.rs  tests.rs
runtime/rhema-agent/: Cargo.toml  project.json
runtime/rhema-agent/src/: README.md  lib.rs  main.rs  mod.rs
runtime/rhema-cli/: COMMANDS_REFACTORING_SUMMARY.md  Cargo.toml  README.md  error_handler.rs  lib.rs  main.rs
runtime/rhema-cli/commands/: coordination.rs  core.rs  (+5 more)
(+1250 files in other folders)
