[package]
name = "rhema"
version = "0.1.0"
edition = "2021"
authors = ["Cory Parent <cory.parent@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/fugue-ai/rhema"
homepage = "https://github.com/fugue-ai/rhema"
documentation = "https://docs.rs/rhema"
readme = "README.md"
keywords = ["git", "ai", "context", "yaml", "protocol", "agent", "cli"]
categories = ["command-line-utilities", "development-tools", "configuration"]

[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/query", 
    "crates/git",
    "crates/ai",
    "crates/mcp",
    "crates/config",
    "crates/monitoring",
    "crates/integrations",
    "crates/cli"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cory Parent <cory.parent@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/fugue-ai/rhema"
homepage = "https://github.com/fugue-ai/rhema"
documentation = "https://docs.rs/rhema"
readme = "README.md"
keywords = ["git", "ai", "context", "yaml", "protocol", "agent", "cli"]
categories = ["command-line-utilities", "development-tools", "configuration"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
git2 = "0.18"
anyhow = "1.0"
walkdir = "2.4"
regex = "1.10"

# Additional utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
colored = "2.0"
indicatif = "0.17"
thiserror = "1.0"
toml = "0.8"
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
dirs = "5.0"
semver = "1.0"
flate2 = "1.0"
sha2 = "0.10"
num_cpus = "1.16"

# Interactive mode dependencies
rustyline = "12.0"
shellexpand = "3.1"

# AI Service and Performance Optimization
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
actix-web = "4.4"
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dashmap = "5.5"
futures = "0.3"
base64 = "0.21"
cached = "0.44"
bincode = "1.3"
tar = "0.4"

# MCP Daemon Dependencies
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full"] }
nix = { version = "0.27", features = ["signal", "process"] }

# Official MCP SDK Dependencies
async-trait = "0.1"

# Git integration enhancements
reqwest = { version = "0.11", features = ["json"] }
notify = "6.1"

# AI Service dependencies
openai = "1.0"
anthropic = "0.0.8"

# Additional CLI dependencies
dialoguer = "0.11"
console = "0.15"
markdown = "0.3"
syntect = "5.1"

# Dev dependencies
tempfile = "3.8"
assert_fs = "1.1"
predicates = "3.0"
mockall = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.3"
quickcheck = "1.0"
test-case = "3.3"
rstest = "0.18"
insta = "1.34"
snapbox = "0.5"
trycmd = "0.15"
env_logger = "0.10"
rand = "0.8"



[dependencies]
# Internal crates
rhema-core = { path = "crates/core" }
rhema-query = { path = "crates/query" }
rhema-git = { path = "crates/git" }
rhema-ai = { path = "crates/ai" }
rhema-mcp = { path = "crates/mcp" }
rhema-config = { path = "crates/config" }
rhema-monitoring = { path = "crates/monitoring" }
rhema-integrations = { path = "crates/integrations" }
rhema-cli = { path = "crates/cli" }

# External dependencies
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
semver = "1.0"
sha2 = "0.10"
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
colored = "2.0"
lazy_static = "1.4"
bincode = "1.3"
flate2 = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true 