[package]
name = "rhema-workspace"
version = "0.1.0"
edition = "2021"
authors = ["Cory Parent <cory.parent@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/fugue-ai/rhema"
homepage = "https://github.com/fugue-ai/rhema"
documentation = "https://docs.rs/rhema"
readme = "README.md"
keywords = ["git", "ai", "context", "yaml", "protocol", "agent", "cli"]
categories = ["command-line-utilities", "development-tools", "configuration"]

[lib]
path = "crates/rhema-api/src/lib.rs"

[[bin]]
name = "rhema"
path = "crates/rhema/main.rs"

[workspace]
resolver = "2"
members = [
    "crates/rhema-core",
    "crates/rhema-query", 
    "crates/rhema-git",
    "crates/rhema-ai",
    "crates/rhema-mcp",
    "crates/rhema-config",
    "crates/rhema-monitoring",
    "crates/rhema-integrations",
    "crates/rhema-api",
    "crates/rhema",
    "apps/rhema",
    "crates/rhema-action",
    "crates/rhema-dependency",
    "crates/rhema-locomo",
    "crates/rhema-knowledge",
    "crates/rhema-agent",
    "crates/rhema-action-tool",
    "crates/action-agents/code-review-agent",
    "crates/action-agents/test-runner-agent",
    "crates/action-agents/deployment-agent",
    "crates/action-agents/documentation-agent",
    "crates/action-agents/monitoring-agent",
    "crates/action-tools/jscodeshift-tool",
    "crates/action-tools/comby-tool",
    "crates/action-tools/ast-grep-tool",
    "crates/action-tools/prettier-tool",
    "crates/action-tools/eslint-tool",
    "crates/action-tools/typescript-tool",
    "crates/action-tools/jest-tool",
    "crates/action-tools/mocha-tool",
    "crates/action-tools/pytest-tool",
    "crates/action-tools/cargo-tool",
    "crates/action-tools/syntax-validation-tool",
    "crates/action-tools/type-checking-tool",
    "crates/action-tools/test-coverage-tool",
    "crates/action-tools/security-scanning-tool",
    "crates/syneidesis/coordination",
    "crates/syneidesis/grpc",
    "crates/syneidesis/config",
    "crates/syneidesis/core",
    "crates/syneidesis/agent"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Cory Parent <cory.parent@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/fugue-ai/rhema"
homepage = "https://github.com/fugue-ai/rhema"
documentation = "https://docs.rs/rhema"
readme = "README.md"
description = "Rhema AI Agent Framework"
keywords = ["git", "ai", "context", "yaml", "protocol", "agent", "cli"]
categories = ["command-line-utilities", "development-tools", "configuration"]

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
git2 = "0.18"
anyhow = "1.0"
walkdir = "2.4"
regex = "1.10"

# Additional utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
colored = "2.0"
indicatif = "0.17"
thiserror = "1.0"
toml = "0.8"
validator = { version = "0.16", features = ["derive"] }
lazy_static = "1.4"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rayon = "1.8"
dirs = "5.0"
semver = "1.0"
flate2 = "1.0"
sha2 = "0.10"
num_cpus = "1.16"
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"

# Syneidesis Coordination Library
syneidesis-coordination = { path = "crates/syneidesis/coordination" }
syneidesis-grpc = { path = "crates/syneidesis/grpc" }
syneidesis-config = { path = "crates/syneidesis/config" }

# gRPC and networking dependencies
tokio-stream = "0.1"
prost-types = "0.14"
tonic = { version = "0.10", features = ["tls"] }

# Interactive mode dependencies
rustyline = "12.0"
shellexpand = "3.1"

# AI Service and Performance Optimization
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }
actix-web = "4.4"
prometheus = "0.13"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
dashmap = "5.5"
base64 = "0.21"
cached = "0.44"
bincode = "1.3"
tar = "0.4"

# MCP Daemon Dependencies
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full"] }
nix = { version = "0.27", features = ["signal", "process"] }

# Git integration enhancements
reqwest = { version = "0.11", features = ["json"] }
notify = "6.1"

# AI Service dependencies
openai = "1.0"
anthropic = "0.0.8"

# Additional CLI dependencies
dialoguer = "0.11"
console = "0.15"
markdown = "0.3"
syntect = "5.1"

# Compression dependencies
lz4 = "1.24"
zstd = "0.13"

# Test dependencies
tempfile = "3.8"
assert_fs = "1.1"
predicates = "3.0"
mockall = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.3"
quickcheck = "1.0"
test-case = "3.3"
rstest = "0.18"
insta = "1.34"
snapbox = "0.5"
trycmd = "0.15"
env_logger = "0.10"
rand = "0.8"

# Additional dependencies for syneidesis
parking_lot = "0.12"
tokio-util = "0.7"
tokio-tungstenite = "0.20"
prost = "0.12"

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.1"
predicates = "3.0"
mockall = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.3"
quickcheck = "1.0"
test-case = "3.3"
rstest = "0.18"
insta = "1.34"
snapbox = "0.5"
trycmd = "0.15"
env_logger = "0.10"
rand = "0.8"
git2 = "0.18"
async-trait = "0.1"
futures = "0.3"


[dependencies]
# Internal crates
rhema-core = { path = "crates/rhema-core" }
rhema-query = { path = "crates/rhema-query" }
rhema-git = { path = "crates/rhema-git" }
rhema-ai = { path = "crates/rhema-ai" }
rhema-mcp = { path = "crates/rhema-mcp" }
rhema-config = { path = "crates/rhema-config" }
rhema-monitoring = { path = "crates/rhema-monitoring" }
rhema-integrations = { path = "crates/rhema-integrations" }
rhema-api = { path = "crates/rhema-api" }
rhema-cli = { path = "apps/rhema" }
rhema-action = { path = "crates/rhema-action" }
rhema-locomo = { path = "crates/rhema-locomo" }
rhema-knowledge = { path = "crates/rhema-knowledge" }
rhema-dependency = { path = "crates/rhema-dependency" }

# External dependencies
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
semver = "1.0"
sha2 = "0.10"
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
colored = "2.0"
lazy_static = "1.4"
bincode = "1.3"
flate2 = "1.0"
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Syneidesis Coordination Library
syneidesis-coordination = { workspace = true }
tracing = "0.1"
hyper = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "test_daemon"
path = "tests/daemon/test_daemon.rs"

[[bin]]
name = "test_daemon_simple"
path = "tests/daemon/test_daemon_simple.rs"

[[example]]
name = "core_unit_tests"
path = "examples/testing/core_unit_tests.rs"

[[example]]
name = "simple_coordination_example"
path = "crates/rhema-api/examples/simple_coordination_example.rs" 
