[package]
name = "rhema-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Command line interface and interactive mode for the Rhema Protocol"
keywords = ["cli", "interactive", "commands"]
categories = ["command-line-utilities"]

[dependencies]
rhema-core = { path = "../../crates/core" }
rhema-query = { path = "../../crates/query" }
rhema-git = { path = "../../crates/git" }
rhema-ai = { path = "../../crates/ai" }
rhema-mcp = { path = "../../crates/mcp" }
rhema-config = { path = "../../crates/config" }
rhema-knowledge = { path = "../../crates/knowledge" }
rhema-locomo = { path = "../../crates/locomo" }  # LOCOMO integration for performance monitoring and analytics
# rhema-monitoring = { path = "../../crates/monitoring" }
rhema-integrations = { path = "../../crates/integrations" }
rhema-action = { path = "../../crates/action" }
rhema-api = { path = "../../crates/rhema-api" }

clap = { workspace = true }
rustyline = { workspace = true }
shellexpand = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
rayon = { workspace = true }
dirs = { workspace = true }
semver = { workspace = true }
flate2 = { workspace = true }
sha2 = { workspace = true }
num_cpus = { workspace = true }
toml = { workspace = true }
lazy_static = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }
tempfile = { workspace = true }
markdown = { workspace = true }
syntect = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
openai = { workspace = true }
anthropic = { workspace = true }
nix = { workspace = true, features = ["fs"] }

[dev-dependencies]
tempfile = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true } 