[package]
name = "rhema-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Core dependencies
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
colored.workspace = true
serde_json = "1.0"

# Agent-specific dependencies
rhema-core = { path = "../core" }
rhema-ai = { path = "../ai" }
rhema-config = { path = "../config" }
rhema-knowledge = { path = "../knowledge" }
rhema-monitoring = { path = "../monitoring" }

# Async and concurrency
futures.workspace = true
async-trait.workspace = true
tokio-stream.workspace = true
dashmap.workspace = true

# Communication and networking
tonic.workspace = true
prost-types.workspace = true

# State management and persistence
redis.workspace = true
base64.workspace = true

# Logging and observability
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
lazy_static.workspace = true
semver.workspace = true
rayon.workspace = true
regex = "1.10"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8" 