[package]
name = "rhema-git"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Git integration and automation for Rhema"
keywords = ["git", "version-control", "workflow"]
categories = ["development-tools"]

[dependencies]
rhema-core = { path = "../core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
git2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true, features = ["time", "rt", "rt-multi-thread"] }
flate2 = { workspace = true }
walkdir = { workspace = true }
tar = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true } 