[package]
name = "rhema-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Query engine and search functionality for the Rhema Protocol"
keywords = ["query", "search", "cql", "engine"]
categories = ["development-tools"]

[dependencies]
rhema-core = { path = "../core" }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
walkdir = { workspace = true }
rayon = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true }
glob = "0.3"
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true } 