[package]
name = "rhema-action-tool"
version = "0.1.0"
edition = "2021"
description = "Shared types and traits for Rhema action tools"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] } 