[package]
name = "rhema-action"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Action Protocol for safe agent-assisted codebase modifications"
keywords = ["action", "protocol", "safety", "validation", "transformation"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
rhema-core = { path = "../rhema-core" }
rhema-query = { path = "../rhema-query" }
rhema-git = { path = "../rhema-git" }
rhema-ai = { path = "../rhema-ai" }
rhema-config = { path = "../rhema-config" }
rhema-monitoring = { path = "../rhema-monitoring" }

# Core dependencies
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }

# File and process handling
walkdir = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
dirs = { workspace = true }

# Async and concurrency
futures = { workspace = true }
rayon = { workspace = true }
once_cell = "1.19"

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Validation and serialization
validator = { workspace = true, features = ["derive"] }
bincode = { workspace = true }
async-trait = "0.1"

# Interactive features
dialoguer = { workspace = true }
console = { workspace = true }
colored = { workspace = true }
indicatif = { workspace = true }

# Git integration
git2 = { workspace = true }

# External tool integration
reqwest = { workspace = true, features = ["json"] }

# Action tool dependencies
rhema-action-tool = { path = "../rhema-action-tool" }
rhema-action-jscodeshift = { path = "../action-tools/jscodeshift-tool" }
rhema-action-comby = { path = "../action-tools/comby-tool" }
rhema-action-ast-grep = { path = "../action-tools/ast-grep-tool" }
rhema-action-prettier = { path = "../action-tools/prettier-tool" }
rhema-action-eslint = { path = "../action-tools/eslint-tool" }
rhema-action-typescript = { path = "../action-tools/typescript-tool" }
rhema-action-jest = { path = "../action-tools/jest-tool" }
rhema-action-mocha = { path = "../action-tools/mocha-tool" }
rhema-action-pytest = { path = "../action-tools/pytest-tool" }
rhema-action-cargo = { path = "../action-tools/cargo-tool" }
rhema-action-syntax-validation = { path = "../action-tools/syntax-validation-tool" }
rhema-action-type-checking = { path = "../action-tools/type-checking-tool" }
rhema-action-test-coverage = { path = "../action-tools/test-coverage-tool" }
rhema-action-security-scanning = { path = "../action-tools/security-scanning-tool" }

[dev-dependencies]
tempfile = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true }
mockall = { workspace = true } 