[package]
name = "rhema-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Rhema Protocol API - Core API and integration layer for the Rhema Protocol"
keywords = ["api", "core", "integration", "protocol", "agent"]
categories = ["api-bindings", "development-tools", "configuration"]

[[bin]]
name = "rhema-api"
path = "src/main.rs"

[dependencies]
tracing = "0.1"
rhema-core = { path = "../core" }
rhema-query = { path = "../query" }
rhema-git = { path = "../git" }
rhema-ai = { path = "../ai" }
rhema-mcp = { path = "../mcp" }
rhema-config = { path = "../config" }
rhema-monitoring = { path = "../monitoring" }
rhema-integrations = { path = "../integrations" }

# Core dependencies for remaining modules
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
git2 = { workspace = true }
dirs = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
validator = { workspace = true }
clap = { workspace = true, features = ["derive"] }
toml = { workspace = true }
rustyline = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }
notify = { workspace = true }
bincode = { workspace = true }
prometheus = { workspace = true }
colored = { workspace = true }

# Async runtime and concurrency
tokio = { workspace = true, features = ["full"] }

# Logging and tracing
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = "3.8" 