[package]
name = "rhema-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Configuration management for Rhema"
keywords = ["config", "validation", "migration", "schema"]
categories = ["development-tools"]

[dependencies]
rhema-core = { path = "../rhema-core" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
bincode = { workspace = true }
num_cpus = { workspace = true }
semver = { workspace = true }
flate2 = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
dirs = { workspace = true }
validator = { workspace = true, features = ["derive"] }
jsonschema = "0.18"
tracing = "0.1"
tracing-subscriber = "0.3"
regex = "1.0"
tokio = { workspace = true, features = ["sync", "rt-multi-thread"] }

[dev-dependencies]
tempfile = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true } 