[package]
name = "rhema-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Core data structures and fundamental operations for the Rhema Protocol"
keywords = ["core", "schema", "scope", "protocol"]
categories = ["development-tools"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
git2 = { workspace = true }
dirs = { workspace = true }
lazy_static = { workspace = true }
regex = { workspace = true }
validator = { workspace = true }
clap = { workspace = true, features = ["derive"] }
toml = { workspace = true }
rustyline = { workspace = true }
reqwest = { workspace = true }
redis = { workspace = true }
notify = { workspace = true }
bincode = { workspace = true }
prometheus = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_fs = { workspace = true }
predicates = { workspace = true } 
